<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/apagarorigem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    style="@style/Widget.AppCompat.CompoundButton.Switch"
                    android:text="@string/apagar_ficheiros_de_origem"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                <Switch
                    android:id="@+id/guardarLocalizacoes"
                    style="@style/Widget.AppCompat.CompoundButton.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:text="@string/guardar_localiza_es"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apagarorigem" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/material_unelevated_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/iniciar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guardarLocalizacoes"
                    app:strokeWidth="2dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginEnd="10dp"
                    android:hint="@string/escolheapastadedestino"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/destino"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/escolheapastadeorigem"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/origem"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/paypal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="15dp"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/black"
                    android:drawingCacheQuality="high"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/paypal" />

                <ImageView
                    android:id="@+id/telegram"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/black"
                    android:drawingCacheQuality="high"
                    android:foregroundGravity="center"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/t_logo" />

                <ImageView
                    android:id="@+id/github"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/black"
                    android:drawingCacheQuality="high"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/github_logo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>